[fix] chart deployment flag

--- a/charts/keybase-alertmanager/templates/deployment.yaml
+++ b/charts/keybase-alertmanager/templates/deployment.yaml
@@ -30,7 +30,7 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
-            - -user
+            - -recipient
             - "{{ .Values.destination }}"
           env:
             - name: KEYBASE_USERNAME
